--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Redirecting to https://ucincinnati.zoom.us/j/7762929020</title>
-    <meta http-equiv="refresh" content="0; URL=http://apps.predictfev1.com/clinical">
+    <meta http-equiv="refresh" content="0; URL=https://ucincinnati.zoom.us/j/7762929020">
   </head>
 
   <link rel="canonical" href="https://ucincinnati.zoom.us/j/7762929020">
